@@ -28,7 +28,7 @@ group :development do
   gem 'guard-rake'
   gem 'pry'
   gem 'pry-doc'
-
+  gem 'pry-byebug'
   # `listen` is a dependency of `guard`
   # from `listen` 3.1+, `ruby_dep` requires Ruby version >= 2.2.3, ~> 2.2
   gem 'listen', '~> 3.0.6'
