@@ -1,21 +1,18 @@
 HOSTS:
-  server:
+  el7:
     roles:
       - server
       - default
-      - master
     platform:   el-7-x86_64
     box:        centos/7
     hypervisor: vagrant
-  client:
+  el6:
     roles:
-      - client
-      - agent
-    platform:   el-7-x86_64
-    box:        centos/7
+      - server
+    platform:   el-6-x86_64
+    box:        centos/6
     hypervisor: vagrant
 CONFIG:
-  log_level: verbose
-  type:      aio
+  log_level:       verbose
+  type:            aio
   vagrant_memsize: 256
-  ## vb_gui: true
