@@ -10,6 +10,7 @@ describe 'useradd::useradd' do
 
         it { is_expected.to compile.with_all_deps }
         it { is_expected.to create_file('/etc/default/useradd').with_content(<<-EOM.gsub(/^\s+/,''))
+               # This file managed by Puppet.
                # useradd defaults file
                GROUP=100
                HOME=/home
@@ -23,6 +24,7 @@ describe 'useradd::useradd' do
         context 'expire' do
           let(:params){{:expire => '2020-01-10'}}
           it { is_expected.to create_file('/etc/default/useradd').with_content(<<-EOM.gsub(/^\s+/,''))
+               # This file managed by Puppet.
                # useradd defaults file
                GROUP=100
                HOME=/home
